Added save/load for rules and fixed getFirst and getLast